@@ -12,7 +12,25 @@ class Lifestream_GitHubFeed extends Lifestream_Feed
 		preg_match('/blockquote title=\"(.+)\"/', $text, $match);
 		return $match[1];
 	}
-
+	function parse_repo($text)
+	{
+		preg_match('/pushed to (.+) at (.+\/.+)/', $text, $match);
+		return array($match[1], $match[2]);
+	}
+	
+	function get_repository_name(&$event, &$bit)
+	{
+		return $bit['repository'];
+	}
+	
+	function get_repository_link(&$event, &$bit)
+	{
+		$name = $this->get_repository_name($event, $bit);
+		if (!$name) return;
+		return $this->lifestream->get_anchor_html($this->get_repository_name($event, $bit), sprintf('http://www.github.com/%s/', $name));
+	}
+	
+	
 	function yield($row, $url, $key)
 	{
 		if (strpos($row->get_id(), "PushEvent") === false) {
@@ -22,6 +40,9 @@ class Lifestream_GitHubFeed extends Lifestream_Feed
 			$description = $this->lifestream->html_entity_decode($row->get_description());
 			$message = $this->parse_message($description);
 			$data['title'] = $message;
+			$repo = $this->parse_repo($row->get_title());
+			$data['branch'] = $repo[0];
+			$data['repository'] = $repo[1];
 			return $data;
 		}
 	}
